--- a/test/app.css
+++ b/test/app.css
@@ -1,3 +1,12 @@
+/* Box sizing reset */
+html {
+  box-sizing: border-box;
+}
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+/* /END Box sizing reset */
+
 .Menu {
   margin: 2rem 1rem;
 }
@@ -27,6 +36,10 @@
   margin-bottom: 0;
 }
 /* Jump reset over */
+
+.Sample {
+  border: 4px solid rgba(255,0,0,0.3);
+}
 
 .Sample--Animation-enter {
   /* Enter animation start state */
@@ -71,6 +84,7 @@
   padding: 1em 0;
   overflow-y: hidden;
   background-color: rgba(0,0,255,0.2);
+  border: 4px solid rgba(255,0,0,0.3);
 }
 
 .CrossFadeContainer :first-child {
